<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editname"
        android:textSize="25dp" 
        android:gravity="center_horizontal" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
        
        <TextView
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:text="@string/name"
        	android:textSize="20dp"  />
        
        <EditText
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/name2" />
        
      </LinearLayout>
      
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
        
        <TextView
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:text="@string/number" 
        	android:textSize="20dp" />
        
        <EditText
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/number2"
            />
        
      </LinearLayout>
      
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
        
        <Button
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:text="@string/Yes" 
        	android:id="@+id/Yes2" android:layout_weight="1"/>
        
        <Button
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:text="@string/No" 
        	android:id="@+id/No2"
        	
        	 android:layout_weight="1"/>

        
      </LinearLayout>

</LinearLayout>